--- a/stylesheets/compass_twitter_bootstrap/_forms.scss
+++ b/stylesheets/compass_twitter_bootstrap/_forms.scss
@@ -98,7 +98,7 @@ input[type="radio"] {
   line-height: normal;
   cursor: pointer;
   @include border-radius(0);
-  border: 0 \9; /* IE9 and down */
+  border: 0 ; /* IE9 and down */
 }
 input[type="image"] {
   border: 0;
@@ -133,7 +133,7 @@ input[type="file"] {
 
 // Reset line-height for IE
 input[type="file"] {
-  line-height: 18px \9;
+  line-height: 18px ;
 }
 
 // Chrome on Linux and Mobile Safari need background-color
@@ -216,7 +216,7 @@ textarea:focus {
   $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
   @include box-shadow($shadow);
   outline: 0;
-  outline: thin dotted \9; /* IE6-9 */
+  outline: thin dotted ; /* IE6-9 */
 }
 input[type="file"]:focus,
 input[type="radio"]:focus,
@@ -301,7 +301,7 @@ select:focus:required:invalid {
   border-color: #ee5f5b;
   &:focus {
     border-color: darken(#ee5f5b, 10%);
-    @include box-shadow(0 0 6px lighten(#ee5f5b, 20%));    
+    @include box-shadow(0 0 6px lighten(#ee5f5b, 20%));
   }
 }
 
@@ -406,7 +406,7 @@ select:focus:required:invalid {
   }
   .uneditable-input {
     border-left-color: #eee;
-    border-right-color: #ccc;    
+    border-right-color: #ccc;
   }
   .add-on {
     margin-right: 0;
