--- a/stylesheets/compass_twitter_bootstrap/_mixins.scss
+++ b/stylesheets/compass_twitter_bootstrap/_mixins.scss
@@ -154,7 +154,7 @@
 // Le grid system
 @mixin gridSystem-columns ($gridGutterWidth, $gridColumnWidth, $gridRowWidth, $columns) {
   width: ($gridColumnWidth * $columns) + ($gridGutterWidth * ($columns - 1));
-} 
+}
 
 @mixin gridSystem-offset($gridColumnWidth, $gridGutterWidth, $columns) {
   margin-left: ($gridColumnWidth * $columns) + ($gridGutterWidth * ($columns - 1)) + ($gridGutterWidth * 2);
@@ -216,7 +216,7 @@
 }
 
 // Take these values and mixins, and make 'em do their thang
-@mixin fluidGridSystem-generate($gridColumns, $fluidGridColumnWidth, $fluidGridGutterWidth) {      
+@mixin fluidGridSystem-generate($gridColumns, $fluidGridColumnWidth, $fluidGridGutterWidth) {
   // Row surrounds the columns
   .row-fluid {
     width: 100%;
@@ -537,7 +537,7 @@
   // IE 7 + 8 can't handle box-shadow to show active, so we darken a bit ourselves
   &:active,
   &.active {
-    background-color: darken($endColor, 10%)\9;
+    background-color: darken($endColor, 10%);
   }
 }
 
