--- a/stylesheets_sass/compass_twitter_bootstrap/_forms.sass
+++ b/stylesheets_sass/compass_twitter_bootstrap/_forms.sass
@@ -95,7 +95,7 @@ input[type="radio"]
   line-height: normal
   cursor: pointer
   +border-radius(0)
-  border: 0 \9
+  border: 0
   /* IE9 and down
 
 input[type="image"]
@@ -131,7 +131,7 @@ input[type="file"]
 
 // Reset line-height for IE
 input[type="file"]
-  line-height: 18px \9
+  line-height: 18px
 
 // Chrome on Linux and Mobile Safari need background-color
 select
@@ -208,7 +208,7 @@ textarea:focus
   $shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6)
   +box-shadow($shadow)
   outline: 0
-  outline: thin dotted \9
+  outline: thin dotted
   /* IE6-9
 
 input[type="file"]:focus,
